--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                </div> 
                <div class="flex">
                    <div class="home">
-                    <div class="home-hr"></div>
-                   <a id="home-c" href="#">HOME</a>
+                       <div class="home-hr"></div>
+                       <a id="home-c" href="#">HOME</a>
                    </div>
                    <div>
-                   <a href="#">SERVICES</a>
-                   <a href="#">PORTFOLIO</a>
-                   <a href="#">TEAM</a>
-                   <a href="gallery.html">GALLERY</a>
-                   <a href="#">CONTACT</a>
+                      <a href="#">SERVICES</a>
+                      <a href="#">PORTFOLIO</a>
+                      <a href="#">TEAM</a>
+                      <a href="gallery.html">GALLERY</a>
+                      <a href="#">CONTACT</a>
                    </div>
                </div>  
             </div>
@@ -55,7 +55,7 @@
                      <hr class="hr2">
                      <h6> WE DESIGN MOBILE FIRST WEBSITES FOR YOU</h6>
                      <div class="flex rectangle4">
-                         <div class="rectangle flex"></div>
+                         <div class="rectangle flex"> <i class="far fa-file-code"></i> </div>
                          <div class="rectangle flex rec2"> <i class="fab fa-telegram-plane"></i> </div>
                          <div class="rectangle flex rec3"> <i class="fas fa-university"></i> </div>
                          <div class="rectangle flex rec4"> <i class="fas fa-flask"></i> </div>
@@ -123,9 +123,9 @@
                     <img class="map" src="assets/media/map.jpeg" alt="map">
                     <div class="flex">
                         <div class="article5">
-                            <p>Flex Template is based on Bootstrap v3.1.1 and it is provided by templatemo for free of charge Sider
+                            <p>Flex Template is based on Bootstrap v3.1.1 and it is provided by <span class="blue"> template</span><span class="green">mo</span> for free of charge Sider
                                  images and portfolio images are from
-                                 Unsplash website. Thank you for visiting. Please tell your friends about our TemplateMo website. </p>
+                                 <span class="red">Unsplash </span> website. Thank you for visiting. Please tell your friends about our <span class="bold"> TemplateMo website. </span> </p>
                             <p>Hic, suscipit, praesentium earum quod ea distinctio impedit ullam deserunt minus dolore quibusdam quis
                                  saepe aliquam doloribus
                                  voluptatibus eum excepturi. Aenean semper erat neque. Nunc et scelerisque nunc, in adipiscing magna </p>
@@ -133,7 +133,7 @@
                                 a quam eget nisi luctus imperdiet. Consectetur 
                                 quod at aperiam corporis totam. Nesciunt minima laborum sapiente totam facere unde est cum quia.  </p>   
                             <p> Phone: 033-033 </p> 
-                            <p> Email info@company.com  </p> 
+                            <p> Email <span class="red">  info@company.com </span> </p> 
                             <p> Address: 880 De Best Studio, Fork Street, San Francico </p> 
                         </div>
                         <div class="address flex"> 
