--- a/index.html
+++ b/index.html
@@ -5,20 +5,32 @@
         <title> Assignment---Checkpoint-2 </title>
         <link rel="stylesheet" href="assets/stylesheet/style.css">
         <script src="https://kit.fontawesome.com/795fa69886.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap" rel="stylesheet">
      </head>
      <body id="top">
-         <header class="container header-alignment">
+         <header >
              <img class="header-image" src="assets/media/banner.jpg" alt="banner">
-             <nav class="header-nav">
-                 <a href="#"> <i class="fab fa-facebook"></i> </a>
-                 <a href="#"> <i class="fab fa-twitter-square "></i> </a>
-                 <a href="#"> <i class="fab fa-linkedin"></i> </a>
-                 <!-- <a href="#">  </a> -->
-             </nav>  
+             <div class="container header-alignment">
+             <nav class="header-nav flex">
+                 <div class="header-nav-a flex">
+                      <a href="#"> <i class="fab fa-facebook-f"></i> </a>
+                 </div> 
+                 <div class="header-nav-a flex">
+                      <a href="#"> <i class="fab fa-twitter"></i> </a>
+                 </div>  
+                 <div class="header-nav-a flex">
+                     <a href="#"> <i class="fas fa-basketball-ball"></i> </a>
+                 </div>
+                 <div class="header-nav-a flex">
+                        <a href="#"> <i class="fab fa-linkedin-in"></i> </a>
+                 </div>
+             </nav> 
+            
             <div class="header-logo-div flex">
                <div class="flex">
                    <img class="header-logo" src="assets/media/logo.png" alt="logo">
-                   <H1 id="flex">FLEX</H1>
+                   <h1 id="flex">FLEX</h1>
                </div> 
                <div class="flex">
                    <div class="home">
@@ -38,19 +50,19 @@
             <hr class="hr1">
             <h6>MORE VISITORS TO YOUR WEBSITE</h6>
             <div class="box">
-                <h6> LET US DESIGN! </h6>
+                <h5> LET US DESIGN! </h5>
             </div>
             <div class="header-dot">
                 <div class="dot dot1">  </div>
                 <div class="dot">  </div>
                 <div class="dot">  </div>
             </div>
+        </div>
          </header>
              
          <main class="container">
-             <section>
-                 <!-- ARTICLE 1 -->
-                 <article>
+                 <!-- SECTION 1 -->
+                 <section>
                      <h2>OUR SERVICES </h2>
                      <hr class="hr2">
                      <h6> WE DESIGN MOBILE FIRST WEBSITES FOR YOU</h6>
@@ -60,9 +72,9 @@
                          <div class="rectangle flex rec3"> <i class="fas fa-university"></i> </div>
                          <div class="rectangle flex rec4"> <i class="fas fa-flask"></i> </div>
                      </div>
-                 </article>
-                  <!-- ARTICLE 2 -->
-                 <article>
+                 </section>
+                  <!-- SECTION 2 -->
+                 <section>
                      <h2> OUR PORTFOLIO </h2>
                      <hr class="hr2">
                      <h6> AMAZING WORK FOR OUR CLIENTS</h6>
@@ -76,9 +88,9 @@
                          <img src="assets/media/portfolio/p7.jpg" alt="pic07">
                          <img src="assets/media/portfolio/p8.jpg" alt="pic08">
                      </div>
-                 </article>
-                  <!-- ARTICLE 3 -->
-                  <article>
+                 </section>
+                  <!-- SECTION 3 -->
+                  <section>
                     <h2> OUR TEAM </h2>
                     <hr class="hr2">
                     <h6> OUR PEOPLE ARE VERY UNITED FOR YOUR SUCCESS </h6>
@@ -88,9 +100,9 @@
                         <img src="assets/media/member3.jpg" alt="pic03">
                         <img src="assets/media/member4.jpg" alt="pic04">
                     </div>
-                  </article>
-                  <!-- ARTICLE 4 -->
-                  <article>
+                  </section>
+                  <!-- SECTION 4 -->
+                  <Section>
                   <h3>DESIGN SKILLS  </h3>
                   <h5> Larm des amet consectetur apcing elic </h5>
                   <div class="flex">
@@ -114,13 +126,14 @@
                           <div class="artical-4-rectangle"> <div class="artical-4-rectangle1 rect4"> MARKETING 80% </div> </div>
                       </div>
                   </div>
-                </article>
-                <!-- ARTICLE 5 -->
-                <article>
+                </Section>
+                <!-- SECTION 5 -->
+                <section>
                     <h2> CONTACT </h2>
                     <hr class="hr3">
-                    <h6> SEND A MESSAGE TO US </h6>
-                    <img class="map" src="assets/media/map.jpeg" alt="map">
+                    <h6 > SEND A MESSAGE TO US </h6>
+                    <p class="map"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3375.919515571293!2d76.35140991450203!3d32.206399320168714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b530e24726e0d%3A0x71ff0cae0784712d!2sAltCampus%20Services%20Pvt.%20Ltd!5e0!3m2!1sen!2sin!4v1622226707065!5m2!1sen!2sin"
+                         width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> </p>
                     <div class="flex">
                         <div class="article5">
                             <p>Flex Template is based on Bootstrap v3.1.1 and it is provided by <span class="blue"> template</span><span class="green">mo</span> for free of charge Sider
@@ -144,8 +157,7 @@
                             <div class="address-div send-message"> SEND MESSAGE</div>
                         </div>
                     </div>
-                </article>
-             </section>
+                </section>
          </main>
          <footer >
              <div class="container flex" >
