--- a/gallery.html
+++ b/gallery.html
@@ -5,13 +5,15 @@
         <title> Assignment---Checkpoint-2 </title>
         <link rel="stylesheet" href="assets/stylesheet/style.css">
         <script src="https://kit.fontawesome.com/795fa69886.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap" rel="stylesheet">
      </head>
      <body>
          <header>
 
          </header>
              
-         <main>
+         <main class="gallery-main">
              <aside class="flex aside-fixed">
                  <div class="flex aside1">
                  <div class="aside1-1">
@@ -24,12 +26,20 @@
                     <h4> Full-stack Developer, Product Designer, and a Traveller</h4>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero porro et,
                          vel nulla adipisci aliquid </p>
-                    <nav>
-                        <a href="#"> <i class="fab fa-facebook"></i> </a>
-                        <a href="#"> <i class="fab fa-twitter-square "></i> </a>
-                        <a href="#"> <i class="fab fa-linkedin"></i> </a>
-                        <!-- <a href="#">  </a> -->
-                    </nav>   
+                    <nav class="header-nav flex gallery-nav">
+                            <div class="header-nav-a g-nav  ">
+                                 <a href="#"> <i class="fab fa-facebook-f"></i> </a>
+                            </div> 
+                            <div class="header-nav-a g-nav flex">
+                                 <a href="#"> <i class="fab fa-twitter"></i> </a>
+                            </div>  
+                            <div class="header-nav-a g-nav flex">
+                                <a href="#"> <i class="fas fa-basketball-ball"></i> </a>
+                            </div>
+                            <div class="header-nav-a g-nav flex">
+                                   <a href="#"> <i class="fab fa-linkedin-in"></i> </a>
+                            </div>
+                    </nav> 
                 </div>
              </aside>
              <section class="section-30">
